[gd_scene load_steps=9 format=3 uid="uid://qc4yxlo2kg2y"]

[ext_resource type="Script" path="res://scenes/objects/goomba.gd" id="1_14js7"]
[ext_resource type="Texture2D" uid="uid://clatt60se4ne0" path="res://assets/enemies/LittleGoomba-0.png" id="1_nlduf"]
[ext_resource type="Texture2D" uid="uid://cbpq07ovp8t4" path="res://assets/enemies/LittleGoombaDeath.png" id="2_aw04g"]
[ext_resource type="Texture2D" uid="uid://dvebiyxh60cbn" path="res://assets/enemies/LittleGoomba-1.png" id="2_xyey2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_y8n7x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_aw04g")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_nlduf")
}, {
"duration": 1.0,
"texture": ExtResource("2_xyey2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yliq"]
size = Vector2(13.5, 10.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvjio"]
size = Vector2(12, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iynrw"]
size = Vector2(19, 13)

[node name="Goomba" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_14js7")

[node name="Animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y8n7x")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.375)
shape = SubResource("RectangleShape2D_1yliq")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 35

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_rvjio")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 39

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_iynrw")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
